# asrai-mcp

./: .gitignore  Dockerfile  README.md  asraix402bot_n8n_promt.txt  docker-compose.yml  package.json  pyproject.toml
npm/: README.md  package.json
src/: indicator_guide.js  server.js  sse-server.js  tools.js
src/asrai_mcp/: indicators_guide.py  server.py  sse_server.py  tools.py
